@@ -1,5 +1,6 @@
 2/18/2015 Oleg Moskalenko <mom040267@gmail.com>
 Version 3.2.5.6 'Marshal West':
+	- bandwidth control fixed; 
 	- REST API docs fixed;
 
 2/3/2015 Oleg Moskalenko <mom040267@gmail.com>
